AG-5116 - fixed MacOS invisible scrollbars not appearing during horizontal scroll

--- a/community-modules/core/src/styles/structural/_common-structural.scss
+++ b/community-modules/core/src/styles/structural/_common-structural.scss
@@ -310,6 +310,12 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     width: 100%;
     display: flex;
     position: relative;
+    &.ag-invisible-scrollbar {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
 }
 
 .ag-layout-print {
